<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:id="@+id/relativeMain"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="@dimen/padd_10"
        android:padding="15dp"
        android:layout_gravity="left"
        android:id="@+id/imStatus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_chevron_left_white_24dp"
        android:backgroundTint="@color/abu_abu"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padd_10"
                android:fontFamily="@font/roboto_medium"
                android:text="Surat"
                android:textColor="@color/main_color_black"
                android:textSize="36dp" />

            <TextView
                android:fontFamily="@font/roboto_medium"
                android:textSize="18dp"
                android:textColor="@color/main_color_black"
                android:text="Izin Sakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="43dp"
            android:src="@drawable/onprogress" />



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        tools:listitem="@layout/list_timeline_izin_status" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padd_10"
                    android:orientation="vertical">


                    <TextView
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/data_ajuan"
                        android:textColor="@color/main_color_black"
                        android:textSize="24dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padd_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/nama"
                        android:textColor="@color/second_color_black"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Muhamad Dios Pratama"
                        android:textColor="@color/main_color_black"
                        android:textSize="24dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padd_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/indikasi_penyakit"
                        android:textColor="@color/second_color_black"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Demam berdarah"
                        android:textColor="@color/main_color_black"
                        android:textSize="24dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padd_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/catatan"
                        android:textColor="@color/second_color_black"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="sesak nafas,demam tinggi"
                        android:textColor="@color/main_color_black"
                        android:textSize="24dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padd_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/lampiran_foto_surat_keterangan_dokter"
                        android:textColor="@color/second_color_black"
                        android:textSize="12dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/link_selengkapnya"
                        android:textColor="@color/blue_dark"
                        android:textSize="18dp" />
                </LinearLayout>






            </LinearLayout>

        </ScrollView>



    </LinearLayout>









</RelativeLayout>